kubernetes/hostname-svc-lb.yaml
apiVersion: v1
kind: Service

metadata:
  name: hostname-lb


spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8383
  selector:
    app: hostname
