kubernetes/hostname-svc-nodeport.yaml
apiVersion: v1
kind: Service

metadata:
  name: hostname-node-port


spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8383
      nodePort: 30123
  selector:
    app: hostname
