kubernetes/hostname-svc-sessionAfinity.yaml
apiVersion: v1
kind: Service

metadata:
  name: hostname-sa

spec:
  sessionAffinity: ClientIP
  ports:
    - port: 80
      targetPort: 8383
  selector:
    app: hostname
