kubernetes/hostname-svc.yaml
apiVersion: v1
kind: Service

metadata:
  name: hostname

spec:
  ports:
    - port: 80
      targetPort: 8383
  selector:
    app: hostname
