kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress

metadata:
  name: hostname-ingress
spec:
  rules:
    - host: hostname.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: hostname-lb
              servicePort: 80
